# vehicle-controller-test-analysis

./: .gitignore  DEVELOPMENT_PLAN.md  E2E_COMPLETE_TEST_PLAN.md  E2E_COMPLETE_TEST_REPORT.md  E2E_TEST_PLAN.md  E2E_TEST_REPORT.md  FRONTEND_FIX_FINAL.md  FRONTEND_FIX_GUIDE.md  FRONTEND_PAGE_CONTENT.txt  IMPLEMENTATION_REPORT.md  INTEGRATION_TEST_FRONTEND_BACKEND.md  INTEGRATION_TEST_REPORT.md  LOCAL_APP_TEST_REPORT.md  NEXT_STEPS.md  PROJECT_FINAL_SUMMARY.md  PROJECT_OVERVIEW.md  PROJECT_PROGRESS_REPORT.md  PROJECT_PROGRESS_REPORT_CLEAN.md  QUICKSTART.md  README.md  REQUIREMENTS.md  REQUIREMENTS_COMPLETENESS_REPORT.md  REQUIREMENTS_FINAL.md  REQUIREMENTS_SUPPLEMENT.md  TEST_PREPARATION_REPORT.md  UI_FUNCTIONAL_TEST_REPORT.md  UI_TEST_SUMMARY.md  WINDOWS_LAUNCH_GUIDE.md  frontend_start_fixed.bat  quick_test.bat  test_frontend.bat  一键启动.bat  一键启动.ps1  一键启动_新版.bat  乱码问题解决方案.md  使用指南.md  依赖问题解决方案.md  修复依赖.bat  修复依赖.ps1  停止服务.bat  (+12 more)
backend/: DEVELOPMENT_REPORT.md  NEW_APIS_DEVELOPMENT_REPORT.md  README.md  pyproject.toml  pytest.ini  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: analysis.py  custom_signals.py  dbc.py  projects.py  reports.py  signal_mappings.py  test_cases.py  test_data.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: analysis_engine.py  dbc_parser.py  file_parser.py  mat_parser.py  (+3 more)
backend/tests/: conftest.py  test_api.py  test_integration.py  test_new_apis.py  test_parsers.py  test_parsers_simple.py  utils.py
backend/uploads/: sample.dbc  test_hil_data.csv
(+64 files in other folders)
